--- a/lit.bib
+++ b/lit.bib
@@ -29,6 +29,19 @@
   Volume                   = {2984}
 }
 
+@Article{PO07b,
+  Title                    = {Semantics and Pragmatics of Real-Time Maude},
+  Author                   = {{\"O}lveczky, P. C. and Meseguer, J.},
+  Journal                  = {Higher-Order and Symbolic Computation},
+  Year                     = {2007},
+  Number                   = {1-2},
+  Pages                    = {161--196},
+  Volume                   = {20},
+
+  Owner                    = {andrew},
+  Timestamp                = {2015.06.09}
+}
+
 @Article{PO02,
   Title                    = {Specification of Real-Time and Hybrid Systems in Rewriting Logic},
   Author                   = {{\"O}lveczky, P. C. and Meseguer, J.},
